<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HelpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/white_grey_border_bottom"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorNavIcon"
        android:elevation="10dp"
        app:title="Bantuan"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardMaxElevation="15dp"
        card_view:contentPadding="5dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/cara_generate"
                android:lineSpacingExtra="2sp"
                android:textSize="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="

            "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|right"
                android:text="@string/penjelasan_cara_generate"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="2sp"
                android:text="@string/caragenerate1"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="1sp"
                android:text="@string/caragenerate2"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="1sp"
                android:text="@string/caragenerate3"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="1sp"
                android:text="@string/caragenerate4"
                android:textSize="18sp" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardMaxElevation="15dp"
        card_view:contentPadding="5dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/cara_kristik"
                android:lineSpacingExtra="2sp"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="

            "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|right"
                android:text="@string/penjelasan_cara_kristik"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="2sp"
                android:text="@string/carakristik1"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="1sp"
                android:text="@string/carakristik2"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="1sp"
                android:text="@string/carakristik3"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical|left"
                android:lineSpacingExtra="1sp"
                android:text="@string/carakristik4"
                android:textSize="18sp" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>