<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.KristikMotifActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_grey_border_bottom"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorNavIcon"
        android:elevation="10dp"
        app:title="Kristik Motif"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/upperImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/show_permission_padding"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/nama_ulos2"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/bintangmaratur" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:fontFamily="@font/roboto_black"
                    android:padding="4dp"
                    android:text="@string/jenis_motif"
                    android:textColor="@color/colorNavText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                app:layout_constraintTop_toBottomOf="@id/upperImage"
                android:id="@+id/buttonSecond"
                android:layout_alignBottom="@id/upperImage"
                android:layout_alignTop="@id/resultgenerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp">

                <Button
                    android:id="@+id/btnKristik"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_below="@+id/imageViewGenerate"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bgbtntask"
                    android:text="@string/btnKristik"
                    android:textColor="@color/cardview_light_background" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/resultgenerate"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/textViewHasil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/roboto_black"
                    android:text="Motif Baru"
                    android:textColor="@color/colorNavText"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageViewKristik"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:layout_below="@+id/textViewHasil"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/nama_ulos2"
                    android:layout_marginTop="35dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/kristikbintangmaratur" />

                <Button
                    android:id="@+id/btnSimpanGenerate"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_below="@+id/imageViewKristik"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bgbtntask"
                    android:text="Simpan"
                    android:textColor="@color/cardview_light_background" />

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>
</LinearLayout>